Split stubborn-contract-wiremock into core + Spring tiers
stubborn-wiremock (core, zero Spring):
- Switches from wiremock-standalone to wiremock (non-standalone) + wiremock-jetty12
- Enforces NoSpring via ArchUnit (NoSpringArchTest) and Maven Enforcer
- WireMockSpring rewrites Apache HttpClient SSL → JDK SSLContext/HttpsURLConnection
- WireMockStubMappingTest migrated from JUnit 4 to JUnit 5

stubborn-wiremock-spring (new Spring-dependent module):
- Moves RestServiceServer, ResourcesFileSource, REST Docs integration classes
- Contains Spring Boot integration tests (WiremockServer*, WiremockMock*, etc.)

stubborn-contract-verifier:
- Switches from wiremock-standalone to wiremock (non-standalone)
- Fixes Handlebars shading: replaces wiremock.com.github.jknack.handlebars.* →
  com.github.jknack.handlebars.* throughout HandlebarsEscapeHelper,
  HandlebarsJsonPathHelper, HandlebarsTemplateProcessor, DefaultResponseTransformer
- Pins Jetty core to 12.0.30 (via dependencyManagement jetty-bom) to match
  wiremock-jetty12:3.13.2 compile target; excludes conflicting Jetty 11 transitive
  deps from wiremock non-standalone
- Fixes WireMockGroovyDslTests: Authorization header is case-preserved by
  HttpHeaders.toSingleValueMap(), use isEqualToIgnoringCase

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>